<resources>
    <string name="app_name">Labo2</string>
    <string name="asynchrone">Asynchrone</string>
    <string name="differee">Différée</string>
    <string name="objet">Objet</string>
    <string name="graphqi">GraphQI</string>
    <string name="exit">Quitter</string>
    <string name="compressee">Compressee</string>
    <string name="envoi">Envoi</string>
    <string name="reception">Reception</string>
    <string name="retour">Retour</string>
    <string name="envoyer">Envoyer</string>
</resources>
