<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/async"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asynchrone"
        android:ems="10"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/dif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/differee"
        android:ems="10"
        android:layout_below="@+id/async"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/obj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objet"
        android:ems="10"
        android:layout_below="@+id/dif"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/compr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compressee"
        android:ems="10"
        android:layout_below="@+id/obj"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/compr"
        android:ems="10"
        android:text="@string/graphqi"
        android:layout_margin="30dp"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graph"
        android:ems="10"
        android:text="@string/exit"
        android:layout_margin="30dp"/>

</RelativeLayout>