<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/envoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/envoi" />

    <EditText
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:layout_below="@+id/envoi" />

    <TextView
        android:id="@+id/reception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reception"
        android:layout_below="@+id/send"/>

    <EditText
        android:id="@+id/received"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:layout_below="@+id/reception" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/retour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_weight="0.5"
            android:text="@string/retour"
            android:ems="10"/>

        <Button
            android:id="@+id/env"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_weight="0.5"
            android:text="@string/envoyer"
            android:ems="10"/>
    </LinearLayout>
</RelativeLayout>